fix flicker
fix flicker

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -224,7 +224,7 @@ code {
   position: absolute;
   opacity: 0.015;
   max-height: 100%;
-  width: 125%;
+  width: 100%;
   user-select: none;
   pointer-events: none;
   height: 100%;
